# thirdparty_repro

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum
tools/one/: BUILD.bazel  main.go
tools/two/: BUILD.bazel  main.go
