load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")

gazelle(
    name = "gazelle",
)

filegroup(
    name = "tools_multiplatform",
    srcs = [
        "//tools/one:multi_platform",
        "//tools/two:multi_platform",
    ],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tools_tar",
    srcs = [":tools_multiplatform"],
    strip_prefix = ".",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "all_tools_tar",
    srcs = [
        ":tools_multiplatform",
        "@thirdparty//tools:all_multi_platform",
    ],
    strip_prefix = ".",
    visibility = ["//visibility:public"],
)

oci_image(
    name = "image",
    base = "@alpine_linux_amd64",
    tars = [":all_tools_tar"],
)

oci_load(
    name = "image_tarball",
    image = ":image",
    visibility = ["//visibility:public"],
)
