load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")

gazelle(
    name = "gazelle",
)

filegroup(
    name = "tools_multiplatform",
    srcs = [
        "//tools/one:multi_platform",
        "//tools/two:multi_platform",
    ],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tools_tar",
    srcs = [":tools_multiplatform"],
    strip_prefix = ".",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "all_tools_tar",
    srcs = [
        ":tools_multiplatform",
        "@thirdparty//tools:all_multi_platform",
    ],
    strip_prefix = ".",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "dlv_tar",
    srcs = [
        "//thirdparty/tools/dlv:multi_platform-linux-amd64",
    ],
    visibility = ["//visibility:public"],
    strip_prefix = ".",
    package_dir = "app",
)

oci_image(
    name = "image",
    base = "@alpine_linux_amd64",
    tars = [":dlv_tar"],
)

oci_load(
    name = "image_tarball",
    image = ":image",
    visibility = ["//visibility:public"],
    repo_tags = [
      "3p_repro:latest"
    ],
)
