load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//build/bzl:multi_platform.bzl", "multi_platform_binaries")

go_library(
    name = "one_lib",
    srcs = ["main.go"],
    importpath = "github.com/be9/thirdparty_repro/tools/one",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_go_delve_delve//pkg/version",
        "@org_golang_x_example_hello//reverse",
    ],
)

go_binary(
    name = "one",
    embed = [":one_lib"],
    visibility = ["//visibility:public"],
)

multi_platform_binaries(
    name = "multi_platform",
    binary = ":one",
)
