load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//build/bzl:multi_platform.bzl", "multi_platform_binaries")

go_library(
    name = "two_lib",
    srcs = ["main.go"],
    importpath = "github.com/be9/thirdparty_repro/tools/two",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_x_exp//rand"],
)

go_binary(
    name = "two",
    embed = [":two_lib"],
    visibility = ["//visibility:public"],
)

multi_platform_binaries(
    name = "multi_platform",
    binary = ":two",
)
